--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "58025bd8-6e00-416d-b730-7adbe7b35c3a",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b626d202-e153-47b5-a79c-d6ddfd90ef48",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "289099b6-bfd4-4693-9dc0-df0d43fbe3d7",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10065/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_3372/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['gender'] = df['gender'].replace({'Male':0,'Female':1})\n"
      ]
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "11d28ba4-a624-441e-9cea-9230c9b11ad5",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7a2724a0-8a8e-44b3-8135-6823bcf01c08",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "03d98ea0-9d30-4c2b-b9ec-82a1acecc886",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "<Axes: xlabel='height', ylabel='weight'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6a3d578b-204b-423c-918b-38c3439f9595",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "860e3412-e009-4bf7-bdcf-1a60c5d0668e",
    "metadata": {},
    "outputs": [],
@@ -585,17 +585,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "b779a971-f0b1-4700-aead-cb6b54027903",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.009845091126612861)"
+       "np.float64(0.008053565860363819)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "ab000302-396e-40cf-8061-dadfc9452223",
    "metadata": {},
    "outputs": [
@@ -628,10 +628,10 @@
     {
      "data": {
       "text/plain": [
-       "array([93.99990241])"
+       "array([94.20992084])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,8 +644,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b8e3d796-c273-4f75-af39-df73828dbb95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>name</th>\n",
+       "      <th>name_short</th>\n",
+       "      <th>name_tv</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>function</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>country</th>\n",
+       "      <th>country_full</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>nationality_full</th>\n",
+       "      <th>nationality_code</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>disciplines</th>\n",
+       "      <th>events</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2421</th>\n",
+       "      <td>1573639</td>\n",
+       "      <td>WEMBANYAMA Victor</td>\n",
+       "      <td>WEMBANYAMA V</td>\n",
+       "      <td>Victor WEMBANYAMA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Athlete</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>France</td>\n",
+       "      <td>France</td>\n",
+       "      <td>France</td>\n",
+       "      <td>France</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>222</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>['Basketball']</td>\n",
+       "      <td>['Men']</td>\n",
+       "      <td>2004-01-04</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         code               name    name_short            name_tv  gender  \\\n",
+       "2421  1573639  WEMBANYAMA Victor  WEMBANYAMA V  Victor WEMBANYAMA       0   \n",
+       "\n",
+       "     function country_code country country_full nationality nationality_full  \\\n",
+       "2421  Athlete          FRA  France       France      France           France   \n",
+       "\n",
+       "     nationality_code  height  weight     disciplines   events  birth_date  \\\n",
+       "2421              FRA     222     0.0  ['Basketball']  ['Men']  2004-01-04   \n",
+       "\n",
+       "      age  \n",
+       "2421   21  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['height'] == 222]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "10c502d7-13c6-48dc-b5c4-381c2c99a4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anibal/miniconda3/envs/python-jupyter/lib/python3.13/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([118.91263133])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_input = pd.DataFrame([[222, 0]], columns=['height', 'gender'])  # Height=222, Gender=Male\n",
+    "predicted_weight = model.predict(random_input)\n",
+    "predicted_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88b9040b-bec0-40bc-9fc6-33888e57cb82",
    "metadata": {},
    "outputs": [],
    "source": []
