--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3372/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_16384/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['gender'] = df['gender'].replace({'Male':0,'Female':1})\n"
      ]
     }
@@ -565,6 +565,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "def RRMSE(true,pred):\n",
     "    RMSE = root_mean_squared_error(true,pred)\n",
@@ -585,177 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "b779a971-f0b1-4700-aead-cb6b54027903",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.008053565860363819)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train, X_test, y_train,y_test = train_test_split(X,y,test_size=0.2)\n",
-    "\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train.values,y_train.values)\n",
-    "\n",
-    "predictions = model.predict(X_test.values)\n",
-    "score = RRMSE(y_test, predictions)\n",
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ab000302-396e-40cf-8061-dadfc9452223",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anibal/miniconda3/envs/python-jupyter/lib/python3.13/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([94.20992084])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random_input = pd.DataFrame([[190, 0]], columns=['height', 'gender'])  # Height=190, Gender=Male\n",
-    "predicted_weight = model.predict(random_input)\n",
-    "predicted_weight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b8e3d796-c273-4f75-af39-df73828dbb95",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>name</th>\n",
-       "      <th>name_short</th>\n",
-       "      <th>name_tv</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>function</th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>country</th>\n",
-       "      <th>country_full</th>\n",
-       "      <th>nationality</th>\n",
-       "      <th>nationality_full</th>\n",
-       "      <th>nationality_code</th>\n",
-       "      <th>height</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>disciplines</th>\n",
-       "      <th>events</th>\n",
-       "      <th>birth_date</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2421</th>\n",
-       "      <td>1573639</td>\n",
-       "      <td>WEMBANYAMA Victor</td>\n",
-       "      <td>WEMBANYAMA V</td>\n",
-       "      <td>Victor WEMBANYAMA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Athlete</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>France</td>\n",
-       "      <td>France</td>\n",
-       "      <td>France</td>\n",
-       "      <td>France</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>222</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>['Basketball']</td>\n",
-       "      <td>['Men']</td>\n",
-       "      <td>2004-01-04</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         code               name    name_short            name_tv  gender  \\\n",
-       "2421  1573639  WEMBANYAMA Victor  WEMBANYAMA V  Victor WEMBANYAMA       0   \n",
-       "\n",
-       "     function country_code country country_full nationality nationality_full  \\\n",
-       "2421  Athlete          FRA  France       France      France           France   \n",
-       "\n",
-       "     nationality_code  height  weight     disciplines   events  birth_date  \\\n",
-       "2421              FRA     222     0.0  ['Basketball']  ['Men']  2004-01-04   \n",
-       "\n",
-       "      age  \n",
-       "2421   21  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['height'] == 222]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "10c502d7-13c6-48dc-b5c4-381c2c99a4b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anibal/miniconda3/envs/python-jupyter/lib/python3.13/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([118.91263133])"
+       "np.float64(0.009116859289286525)"
       ]
      },
      "execution_count": 23,
@@ -764,15 +602,89 @@
     }
    ],
    "source": [
-    "random_input = pd.DataFrame([[222, 0]], columns=['height', 'gender'])  # Height=222, Gender=Male\n",
-    "predicted_weight = model.predict(random_input)\n",
-    "predicted_weight"
+    "X_train, X_test, y_train,y_test = train_test_split(X,y,test_size=0.2)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Step 4: Predict using the scaled test data\n",
+    "predictions = model.predict(X_test_scaled)\n",
+    "score = RRMSE(y_test, predictions)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "88b9040b-bec0-40bc-9fc6-33888e57cb82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scaler.joblib']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump,load\n",
+    "\n",
+    "# Save the trained model\n",
+    "dump(model, 'linear_model.joblib')\n",
+    "\n",
+    "# Save the scaler\n",
+    "dump(scaler, 'scaler.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bfb26897-c3af-4297-bc88-c10ac65e28e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anibal/miniconda3/envs/python-jupyter/lib/python3.13/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([94.05236326])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the scaler and model\n",
+    "scaler = load('scaler.joblib')\n",
+    "model = load('linear_model.joblib')\n",
+    "\n",
+    "# Example: Predict for new data\n",
+    "new_data = [[190, 0]]  \n",
+    "new_data_scaled = scaler.transform(new_data)\n",
+    "prediction = model.predict(new_data_scaled)\n",
+    "prediction"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b9040b-bec0-40bc-9fc6-33888e57cb82",
+   "id": "3a66fa1c-ad78-421b-9c72-a84f51550019",
    "metadata": {},
    "outputs": [],
    "source": []
