--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16384/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_63457/35551863.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['gender'] = df['gender'].replace({'Male':0,'Female':1})\n"
      ]
     }
@@ -500,7 +500,7 @@
        "weight    1.000000\n",
        "height    0.850432\n",
        "code      0.101765\n",
-       "age       0.037714\n",
+       "age       0.037125\n",
        "gender   -0.804444\n",
        "Name: weight, dtype: float64"
       ]
@@ -564,13 +564,9 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.metrics import r2_score,mean_absolute_percentage_error\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "def RRMSE(true,pred):\n",
-    "    RMSE = root_mean_squared_error(true,pred)\n",
-    "    DEN = np.sqrt(np.sum(np.square(pred)))\n",
-    "    return RMSE/DEN"
+    "\n"
    ]
   },
   {
@@ -586,17 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "b779a971-f0b1-4700-aead-cb6b54027903",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.009116859289286525)"
+       "0.8080421161531376"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,13 +609,36 @@
     "\n",
     "# Step 4: Predict using the scaled test data\n",
     "predictions = model.predict(X_test_scaled)\n",
-    "score = RRMSE(y_test, predictions)\n",
-    "score"
+    "\n",
+    "r2 = r2_score(y_test, predictions)\n",
+    "r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
+   "id": "f18df513-c43a-452e-b89a-fcd6c0a46800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05632717350772522"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mape = mean_absolute_percentage_error(y_test, predictions)\n",
+    "mape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "88b9040b-bec0-40bc-9fc6-33888e57cb82",
    "metadata": {},
    "outputs": [
@@ -629,7 +648,7 @@
        "['scaler.joblib']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "bfb26897-c3af-4297-bc88-c10ac65e28e1",
    "metadata": {},
    "outputs": [
@@ -661,10 +680,10 @@
     {
      "data": {
       "text/plain": [
-       "array([94.05236326])"
+       "array([93.8628387])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
